--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.webjars:webjars-locator:0.48'
     implementation 'org.webjars:bootstrap:5.3.2'
     implementation 'org.webjars:jquery:3.7.1'
+    implementation 'org.modelmapper:modelmapper:3.2.0'
 
     compileOnly 'org.projectlombok:lombok'
 
