시큐리티 처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -72,7 +72,7 @@ spring:
 logging:
   level:
     org:
-      springframework: info
+      springframework: debug
       hibernate:
         type:
           descriptor:
